--- a/trailhead/pdi/notebook/02-image-manipulation.ipynb
+++ b/trailhead/pdi/notebook/02-image-manipulation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "22d0af27",
+   "id": "1e5df7c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c4341cb0",
+   "id": "fa5a34e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b309b7a7",
+   "id": "dc63c0eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e658439f",
+   "id": "0040ead7",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ce698321",
+   "id": "bf27a2d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b3f06d93",
+   "id": "39c8ec14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de09d4c7",
+   "id": "d1e60c38",
    "metadata": {},
    "source": [
     "## Image crop"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dbbcc4e7",
+   "id": "47aca4c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a273cb0",
+   "id": "b6493446",
    "metadata": {},
    "source": [
     "## Image resize"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "59dd3738",
+   "id": "4a280556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5d8f8ada",
+   "id": "022a22da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f02c6d05",
+   "id": "e19ed340",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f1531e8e",
+   "id": "274f13eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,10 +163,161 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "9fda441b",
+   "cell_type": "markdown",
+   "id": "fc26846d",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Image flipping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d34c01f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread('../data/bridge.png')\n",
+    "cv2.imshow(\"Original\", img) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e015841d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flip_horizontal = img[::-1,:] #equivalent commmand below\n",
+    "#flip_horizontal = cv2.flip(img, 1)\n",
+    "cv2.imshow(\"Horizontal Flip\", flip_horizontal)\n",
+    "#cv2.waitKey(0)  \n",
+    "#cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "661d522d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flip_vertical = img[:,::-1] #equivalent commmand below\n",
+    "#flip_vertical = cv2.flip(img, 0) \n",
+    "cv2.imshow(\"Vertical Flip\", flip_vertical) \n",
+    "#cv2.waitKey(0)  \n",
+    "#cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8aaf18a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flip_hv = img[::-1,::-1] #equivalent commmand below\n",
+    "#flip_hv = cv2.flip(img, -1) \n",
+    "cv2.imshow(\"Horizontal and Vertical Flip\", flip_hv) \n",
+    "cv2.waitKey(0)  \n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a4bed75",
+   "metadata": {},
+   "source": [
+    "## Image rotating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "872cf39c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread('../data/bridge.png')\n",
+    "(height, width) = img.shape[:2] \n",
+    "center = (height // 2, width // 2) \n",
+    "M = cv2.getRotationMatrix2D(center, 30, 1.0)#30 degrees\n",
+    "rotated_img = cv2.warpAffine(img, M, (width, height))  \n",
+    "cv2.imshow(\"Image rotated by 30 degrees\", rotated_img) \n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d951003",
+   "metadata": {},
+   "source": [
+    "## Color Systems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4ee76f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread('../data/bridge.png')\n",
+    "cv2.imshow(\"Original\", img)\n",
+    "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "cv2.imshow(\"Gray\", gray)\n",
+    "hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "cv2.imshow(\"HSV\", hsv)\n",
+    "lab = cv2.cvtColor(img, cv2.COLOR_BGR2LAB)\n",
+    "cv2.imshow(\"L*a*b*\", lab)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bbb4fa6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread('../data/bridge.png')\n",
+    "(blue, green, red) = cv2.split(img)\n",
+    "cv2.imshow(\"Red\", red)\n",
+    "cv2.imshow(\"Green\", green) \n",
+    "cv2.imshow(\"Blue\", blue)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "89bd7405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reconstructed = cv2.merge([blue, green, red]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5463dbb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread('../data/bridge.png')\n",
+    "(blue, green, red) = cv2.split(img)\n",
+    "zeros = np.zeros(img.shape[:2], dtype = \"uint8\")  \n",
+    "cv2.imshow(\"Red\", cv2.merge([zeros, zeros, red]))\n",
+    "cv2.imshow(\"Green\", cv2.merge([zeros, green, zeros]))\n",
+    "cv2.imshow(\"Blue\", cv2.merge([blue, zeros, zeros]))\n",
+    "cv2.imshow(\"Original\", img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
